# c-to-go

./: CMakeLists.txt  Makefile  README.md
libs/lib/: libdill.so.20.5.0
libs/libdill/lib/: libdill.so.20
libs/libdill/lib/pkgconfig/: libdill.pc
src/: main.c  server.c
